// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Processing Service processJob - simple mock - completed 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Basic Mocked Run",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Message",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": "https://sap.com",
    "mimeType": null,
    "name": "Link",
    "type_code": "link",
  },
  {
    "filename": "log.txt",
    "link": null,
    "mimeType": "text/plain",
    "name": "Data",
    "type_code": "data",
  },
  {
    "filename": "log.pdf",
    "link": null,
    "mimeType": "application/pdf",
    "name": "Data",
    "type_code": "data",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed 2`] = `
[
  {
    "code": "jobBasicMock",
    "severity_code": "info",
    "text": "Job is running in basic mock mode.",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed 3`] = `
[
  {
    "code": "jobCompleted",
    "severity_code": "info",
    "text": "Job completed successfully",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with error 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Basic Mocked Run",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Message",
    "type_code": "message",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with error 2`] = `
[
  {
    "code": "jobBasicMock",
    "severity_code": "info",
    "text": "Job is running in basic mock mode.",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with error 3`] = `
[
  {
    "code": "jobCompletedWithError",
    "severity_code": "error",
    "text": "Job completed. An error occurred during job processing.",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with warning 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Basic Mocked Run",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Message",
    "type_code": "message",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with warning 2`] = `
[
  {
    "code": "jobBasicMock",
    "severity_code": "info",
    "text": "Job is running in basic mock mode.",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with warning 3`] = `
[
  {
    "code": "jobCompletedWithWarning",
    "severity_code": "warning",
    "text": "Job completed. A warning occurred during job processing.",
  },
]
`;

exports[`Processing Service processJob - simple mock - failed 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Basic Mocked Run",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Message",
    "type_code": "message",
  },
]
`;

exports[`Processing Service processJob - simple mock - failed 2`] = `
[
  {
    "code": "jobBasicMock",
    "severity_code": "info",
    "text": "Job is running in basic mock mode.",
  },
]
`;

exports[`Processing Service processJob - simple mock - failed 3`] = `
[
  {
    "code": "jobFailed",
    "severity_code": "error",
    "text": "Job failed. An error occurred during job processing.",
  },
]
`;

exports[`Processing Service updateJob - results - base64 1`] = `
[
  {
    "filename": null,
    "link": "https://sap.com",
    "mimeType": null,
    "name": "Link",
    "type_code": "link",
  },
  {
    "filename": "test.txt",
    "link": null,
    "mimeType": "text/plain",
    "name": "Data",
    "type_code": "data",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Result",
    "type_code": "message",
  },
]
`;

exports[`Processing Service updateJob - results - base64 2`] = `
[
  {
    "code": "jobCompleted",
    "severity_code": "info",
    "text": "Job completed successfully",
  },
]
`;

exports[`Processing Service updateJob - results - readable 1`] = `
[
  {
    "filename": "test.txt",
    "link": null,
    "mimeType": "text/plain",
    "name": "Data",
    "type_code": "data",
  },
]
`;

exports[`Processing Service updateJob - results - readable 2`] = `[]`;

exports[`Processing Service updateJob - translation 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Result",
    "type_code": "message",
  },
]
`;

exports[`Processing Service updateJob - translation 2`] = `
[
  {
    "code": "jobCompleted",
    "severity_code": "info",
    "text": "Job completed successfully",
  },
]
`;

exports[`Processing Service updateJob - translation 3`] = `
[
  {
    "code": "jobCompleted",
    "severity_code": "info",
    "text": "Job terminé",
  },
]
`;

exports[`Processing Service updateJob - translation 4`] = `
[
  {
    "code": "jobCompleted",
    "severity_code": "info",
    "text": "Job abgeschlossen",
  },
]
`;
